fully fixed text overflow

--- a/css/queries.css
+++ b/css/queries.css
@@ -40,7 +40,6 @@
 	margin-left: 0;
 }
 .overflow {
-	width: auto;
 	max-width: 100%;
 }
 .home {
