--- a/css/r4s.css
+++ b/css/r4s.css
@@ -32,7 +32,7 @@ body > header {
 	color: var(--white);
 	background-color: var(--header-bg);
 	box-shadow: 0 4px 10px -2px var(--transp);
-	padding: 1rem;
+	padding: 0 1rem;
 	z-index: 1;
 }
 body > header a,
@@ -40,6 +40,8 @@ body > footer a {
 	color: var(--white);
 }
 body > header nav {
+	height: 100%;
+	margin-top: auto;
 	display: grid;
 	grid-template-columns: 1fr 5fr 1fr;
 }
@@ -76,10 +78,13 @@ a {
 .burger-menu {
 	position: sticky;
 	top: 5rem;
-	gap: 0.5rem;
-	background-color: var(--black);
+	display: flex;
+	flex-flow: column nowrap;
+	gap: 0.2rem;
+	background-color: var(--menu-bg);
 }
 .burger-menu a {
+	padding: 0.1rem 0.5rem;
 	color: var(--white);
 	text-decoration: none;
 }
@@ -98,7 +103,7 @@ input[type='search']:focus {
 }
 .item-page {
 	display: flex;
-	flex-direction: column;
+	flex-flow: column nowrap;
 	justify-content: center;
 	padding: 2rem;
 }
@@ -198,9 +203,9 @@ button:hover {
 	background: var(--button-bg-hover);
 }
 h1:not(.hero-img h1) {
-	margin: 0 0 1rem 25%;
+	margin: 0 auto 1rem;
 	padding: 1rem 0 0.5rem;
-	max-width: 50%;
+	max-width: 80%;
 	text-align: center;
 	border-bottom: 2px solid rgba(0, 0, 0, 0.1);
 }
@@ -221,7 +226,7 @@ h2 {
 }
 .overflow {
 	display: block;
-	width: 100%;
+	width: auto;
 	max-width: 80%;
 	white-space: nowrap;
 	text-overflow: ellipsis;
